Feature: Added SSE end point example and JavaScript sample code to consume it. TODO: WebSockets

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 HELP.md
 .gradle
-build/
+**/build/
+**/bin
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+
+### Testing resources
+mongo/
 
 ### STS ###
 .apt_generated
